salt/roots/salt/dev/monitor/iptables
# Generated by iptables-save v1.4.7 on Wed May 28 13:47:39 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
#:LOGNDROP - [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 1514 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -m multiport --dports 4505,4506 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
#-A INPUT -j LOGNDROP
#-A LOGNDROP -m tcp -p tcp -m limit --limit 5/min -j LOG --log-prefix "Denied TCP: " --log-level 7
#-A LOGNDROP -m udp -p udp -m limit --limit 5/min -j LOG --log-prefix "Denied UDP: " --log-level 7
#-A LOGNDROP -m icmp -p icmp -m limit --limit 5/min -j LOG --log-prefix "Denied ICMP: " --log-level 7
#-A LOGNDROP -j DROP
COMMIT
# Completed on Wed May 28 13:47:39 2014
